--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,12 +1,17 @@
+* {
+    box-sizing: border-box;
+    overflow: visible;
+}
+
 body {
 	display: flex;
 	min-height: calc( 100vh - 16px );
-	flex-direction: column;
+    flex-direction: column;
   }
   
   body > main {
 	display: flex;
-	flex: 1;
+    background: url(/client/images/background.jpg);
   }
 
   .content {
@@ -14,8 +19,9 @@ body {
   }
   
   .menu {
-    flex: 0 0 175px;
-    padding: 8px;
+    flex: 0 0 181px;
+    padding: 11px;
+    overflow: hidden;
   }
   
 
@@ -28,13 +34,13 @@ body {
 
 :root {
     background: black;
+    overflow-y: auto;
 }
 
 body {
     color: white;
     width: 780px;
     margin: 0 auto;
-    background: url(/client/images/background.jpg);
     font-family: sans-serif;
     font-size: 12px;
 }
@@ -55,10 +61,7 @@ body > main {
     border-image-slice: 19;
     border-top: none;
     border-bottom: none;
-}
-
-* {
-    box-sizing: border-box;
+    padding-bottom: 30px;
 }
 
 footer {
@@ -73,7 +76,7 @@ footer {
 .menu h2 {
     font-size: 11px;
     background: #333 url(/client/images/menu-header.jpg) 100% 0 no-repeat;
-    padding: 9px;
+    padding: 9px 12px;
 	padding-top: 5px;
 	margin-top: 3px;
 }
@@ -91,9 +94,14 @@ footer {
 }
 
 .menu a {
+    white-space: nowrap;
     color: #888888;
     text-decoration: none;
     line-height: 14px;
+    text-overflow: ellipsis;
+    max-width: 160px;
+    display: inline-block;
+    overflow: hidden;
 }
 
 .menu a:hover {
@@ -120,13 +128,6 @@ header a {
     padding-top: 16px;
 }
 
-.content table {
-    background: black;
-    border-collapse: collapse;
-    margin-bottom: 12px;
-    margin-top: 8px;
-}
-
 a {
     text-decoration: none;
     color: #888888;
@@ -136,19 +137,9 @@ a:hover {
     color: white;
 }
 
-.content td, .content th {
-    border: 2px solid #5b2402;
-    padding: 2px 5px;
-    text-align: center;
-}
-
-.content td:first-child {
-    width: 162px;
-}
-
 .menu ul {
     list-style-type: none;
-    padding-left: 0;
+    padding-left: 3px;
 }
 
 .gallery-album h1 {
@@ -189,4 +180,12 @@ a:hover {
     text-align: center;
     margin: 1em;
     color: #a9927e;
+}
+
+.content li {
+    margin-bottom: 8px;
+}
+
+.content ul {
+    display: inline-block;
 }
