--- a/server/templates/before-content.html
+++ b/server/templates/before-content.html
@@ -3,6 +3,7 @@
 <main>
 <nav class="menu">
 {% include main-menu-content.html %}
+{% include mod-categories-menu-content.html %}
 {% include friends-menu-content.html %}
 </nav>
 	<article class="content {{ page.layout }}">
