--- a/server/templates/friends-menu-content.html
+++ b/server/templates/friends-menu-content.html
@@ -1,5 +1,5 @@
 		<h2>Przyjaciele</h2>
-		<ul class="friend-buttons">
+		<ul class="friend-buttons" id="friend-buttons" data-turbolinks-permanent>
 			<li><a href="https://themodders.org"><img src="/client/images/friend-buttons/themodders.png"></a></li>
 			<li><a href="https://poziomkaz.pl"><img src="/client/images/friend-buttons/poziomka.gif"></a></li>
 			<li><a href="https://czaszaplaty.themodders.org"><img src="/client/images/friend-buttons/czaszaplaty.png"></a></li>
