--- a/server/templates/header.html
+++ b/server/templates/header.html
@@ -16,5 +16,5 @@
 <link rel="stylesheet" href="/client/styles/style.css">
 
 <header>
-	<a href="/">Home</a> &gt; {{ page.title }}
+	<!-- <a href="/">Home</a> &gt; {{ page.title }} -->
 </header>
