--- a/server/templates/main-menu-content.html
+++ b/server/templates/main-menu-content.html
@@ -4,6 +4,6 @@
 			<li><a href="/linki">Linki</a></li>
 			<li><a href="/czym-sa-modyfikacje">Czym są modyfikacje?</a></li>
 			<li><a href="/jak-zaczac">Jak zacząć?</a></li>
-			<li><a href="/gothic-i">Gothic I</a></li>
-			<li><a href="/gothic-ii">Gothic II: NK</a></li>
+			<li><a href="/gothic-i/">Gothic I</a></li>
+			<li><a href="/gothic-ii/">Gothic II: NK</a></li>
 		</ul>
