--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -78,7 +78,8 @@ footer {
     background: #333 url(/client/images/menu-header.jpg) 100% 0 no-repeat;
     padding: 9px 12px;
 	padding-top: 5px;
-	margin-top: 3px;
+    margin-top: 3px;
+    height: 26px;
 }
 
 .menu h2:not(:first-child) {
@@ -104,6 +105,10 @@ footer {
     overflow: hidden;
 }
 
+.menu h2 a {
+    color: white;
+}
+
 .menu a:hover {
     color: white;
 }
@@ -118,8 +123,14 @@ header a {
 .content h3 {
     color: #a9927e;
     font-size: 12px;
-    margin-top: 0;
     text-transform: uppercase;
+    margin-top: 28px;
+}
+
+.content h1:first-child, 
+.content h2:first-child, 
+.content h3:first-child {
+    margin-top: 0;
 }
 
 .content {
@@ -170,6 +181,8 @@ a:hover {
 
 .menu .friend-buttons {
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .menu .friend-buttons img {
@@ -183,9 +196,34 @@ a:hover {
 }
 
 .content li {
-    margin-bottom: 8px;
+    line-height: 24px;
 }
 
-.content ul {
+.mod-page ul {
+    margin-top: 6px;
+}
+
+.mod-page ul:nth-of-type(2),
+.mod-page ul:nth-of-type(3) {
     display: inline-block;
+    width: 45%;
+    vertical-align: top;
+}
+
+.mod-page ul:nth-of-type(1),
+.mod-page ul:nth-of-type(2),
+.mod-page ul:nth-of-type(3) {
+    font-size: 10px;;
+}
+
+.menu a.active {
+    font-weight: bold;
+    color: #c8c8c8;
+}
+
+.content p {
+    margin-bottom: 0;
+    margin-top: 8px;
+    line-height: 16px;
+}
 }
