--- a/server/templates/mod-list.html
+++ b/server/templates/mod-list.html
@@ -1,20 +1,20 @@
 {% include before-content.html %}
 
-{{ page.content | markdownify }}
+<h1>{{ page.title }}</h1>
 
+{{ page.content }}
+
+<ul>
 {%
 assign urlLength = page.url | size %}{%
 
 for otherPage in site.pages %}{%
 	assign urlPrefix = otherPage.url | slice: 0, urlLength %}{%
 	unless urlPrefix != page.url or
-			otherPage.layout != "mod-list" or
 			page.url == otherPage.url
-%}		<h2><a href="{{ otherPage.url }}">{{ otherPage.title }}</a></h2>
-		{{ otherPage.content }}
-
-{%
-	endunless %}{%
+		%}		<li><a href="{{ otherPage.url }}">{{ otherPage.title }}</a></li>
+{%	endunless %}{%
 endfor %}
+</ul>
 
 {% include after-content.html %}
