--- a/server/templates/mod-category.html
+++ b/server/templates/mod-category.html
@@ -1,5 +1,8 @@
 {% include before-content.html %}
 
+<h1>{{ page.title }}</h1>
+<span class="meta">Napisał: {{ page.author }}, {{ page.time }}</span>
+
 {{ page.content | markdownify }}
 
 {%
