--- a/server/templates/main-menu-content.html
+++ b/server/templates/main-menu-content.html
@@ -6,4 +6,5 @@
 			<li><a href="/jak-zaczac">Jak zacząć?</a></li>
 			<li><a href="/gothic-i/">Gothic I</a></li>
 			<li><a href="/gothic-ii/">Gothic II: NK</a></li>
+			<li><a href="https://git.themodders.org/edit/gmod.themodders.org/{{ page.path }}">Edytuj tą stronę</a></li>
 		</ul>
