add main page link to header

--- a/server/templates/header.html
+++ b/server/templates/header.html
@@ -15,6 +15,6 @@
 <script defer src="/client/scripts/turbolinks.js"></script>
 <link rel="stylesheet" href="/client/styles/style.css">
 
-<header>
-	<!-- <a href="/">Home</a> &gt; {{ page.title }} -->
-</header>
+<a href="/">
+	<header></header>
+</a>
