add search engine

--- a/server/templates/main-menu-content.html
+++ b/server/templates/main-menu-content.html
@@ -1,10 +1,9 @@
 		<h2>Menu Główne</h2>
 		<ul>
 			<li><a href="/">Strona główna</a></li>
-			<li><a href="/linki">Linki</a></li>
+			<li><a href="/search">Szukaj</a></li>
 			<li><a href="/czym-sa-modyfikacje">Czym są modyfikacje?</a></li>
 			<li><a href="/jak-zaczac">Jak zacząć?</a></li>
-			<li><a href="/gothic-i/">Gothic I</a></li>
-			<li><a href="/gothic-ii/">Gothic II: NK</a></li>
+			<li><a href="/linki">Linki</a></li>
 			<li><a href="https://git.themodders.org/edit/gmod.themodders.org/{{ page.path }}">Edytuj tą stronę</a></li>
 		</ul>
