--- a/server/templates/default.html
+++ b/server/templates/default.html
@@ -1,7 +1,9 @@
 {% include before-content.html %}
 
 <h1>{{ page.title }}</h1>
-<span class="meta">Napisał: {{ page.author }}, {{ page.time }}</span>
+{% if page.author != null 
+%}	<span class="meta">Napisał: {{ page.author }}, {{ page.time }}</span>
+{% endif %}
 
 {{ page.content | markdownify }}
 
